--- a/desafio5/EnClaseR/package.json
+++ b/desafio5/EnClaseR/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio",
+  "name": "enclaser",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2"
   }
 }
