--- a/PracticaIntegradora/desafio/package.json
+++ b/PracticaIntegradora/desafio/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
+    "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.1"
   }
